Mon Mar 28 20:10:25 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h: C-API宣言抜け
	* p-xgroup-by.c: postqueuing_policyがうまく設定できていなかった.

Mon Mar 28 18:22:06 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* string-buffer.c: StringBuffer::new(array)追加.  
	  rb_fairy_string_buffer_new2追加. rb_fairy_string_buffer_marshal_dump,
	rb_fairy_string_buffer_marshal_load: 完成

Sun Mar 27 23:51:05 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.h, fixnum-buffer.c: C-API
	  rb_fairy_fixnum_buffer_each_callback追加
	* fixnum-buffer.c: rb_fairy_fixnum_buffer_newで initalizeを呼んで
	  いなかった.
	* string-buffer.c: "\n"ターミネートから, fixnum-bufferを用いて文字
	  列長を表すように変更した.

Sat Mar 26 15:35:09 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c, fairy.h: rb_fairy_processor_def_export2 追加
	* fairy.c, fairy.h: FixnumBuffer対応
	* p-xgroup-by.c: xthread.hインクルード忘れ
	* xthread.h: 最新版に更新

Thu Mar 24 18:27:13 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* fairy.c, fairy.h: 宣言が不適切だった.
	* xmarshaled-queue.c: rb_fairy_xmarshaled_queue_str_push で ulong
	 とlongの比較をしていた.

Thu Mar 24 14:19:33 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* p-sort.rb, p-injext.rb: [BUG#302]対応

Tue Mar 22 12:26:37 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* ext/p-xgroup-by.c: 追加
	
	* fairy.c, fairy.h: rb_FairyEOSをsymbolに変更. rb_cFairyProcessor,
	  rb_cFairyImport, rb_cFairyImportCTLROLEN* 追加
	  C-API: rb_fairy_processor_def_export 追加.
	  PXGroupBy対応.
	* simple-hash.c: C-API: rb_fairy_simple_hash_uinit追加
	* group-by.rb, c-group-by.rb: PXGroupBy対応.
	* processor.rb: Processor#startexportをfairy.so require後に変更


Sat Mar 19 16:09:01 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* bin/fairy: cache機能追加による再生成

Thu Mar 17 23:43:30 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled-queue.c: rb_fairy_xmarshaled_queue_popにバグがあった.

Thu Mar 17 20:26:03 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>

	* xmarshaled_queue.c: cache機能追加
	* conf.rb: 上記のためのプロパティ追加
