@@ -1,3 +1,8 @@
+Mon Mar 28 23:20:33 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
+
+	* p-xgroup-by.c: xgroup_byでブロックを評価するのを忘れていた.
+	* p-basic-group-by.rb: 上記の対応で修正
+
 Mon Mar 28 20:10:25 2011  Keiju Ishitsuka  <keiju@ishitsuka.com>
 
 	* fairy.h: C-API宣言抜け
